<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="281dp"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_name"
            android:layout_gravity="center"

            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            android:layout_gravity="center"

            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_text"
            android:layout_gravity="center"

            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_username_input"
            android:layout_width="245dp"
            android:layout_height="65dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/username_text"
            android:layout_gravity="center"

            android:inputType="text" />

        <TextView
            android:id="@+id/textView_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:layout_gravity="center"

            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_password_input"
            android:layout_width="244dp"
            android:layout_height="55dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password_text"
            android:layout_gravity="center"

            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkBox_remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RememberMe_text" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="216dp"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:text="@string/login_text" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="216dp"
            android:layout_height="69dp"
            android:layout_gravity="center"

            android:text="@string/register_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>