<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="244dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="216dp"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/username_home"
            android:layout_width="216dp"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:text="@string/username_text"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_logout"
            android:layout_width="@dimen/button_primary_width"
            android:layout_height="@dimen/button_primary_height"
            android:layout_marginTop="@dimen/section_spacing_medium"
            android:layout_gravity="center"
            android:text="@string/logout" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
